--- a/static/css/fish.css
+++ b/static/css/fish.css
@@ -1,33 +1,22 @@
 @-webkit-keyframes myfirst {
-  0% {
-      margin-left: -235px;
-  }
+  0% {margin-left: -235px;}
 
-  90% {
-      margin-left: 100%;
-  }
+  90% {margin-left: 100%;}
 
-  100% {
-      margin-left: 100%;
-  }
+  100% {margin-left: 100%;}
 }
 
 /* Animation */
 @keyframes myfirst {
-  0% {
-      margin-left: -235px;
-  }
+  0% {margin-left: -235px;}
 
-  70% {
-      margin-left: 100%;
-  }
+  70% {margin-left: 100%;}
 
-  100% {
-      margin-left: 100%;
-  }
+  100% {margin-left: 100%;}
 }
 
 .fish {
+  z-index: 0;
   background-image: url("http://www.geertjanhendriks.nl/codepen/form/fish.png");
   width: 235px;
   height: 104px;
