--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     {% for file in css_files %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/' + file) }}">
     {% endfor %}
@@ -22,6 +24,9 @@
     {% endblock %}
 </head>
 <body>
+    <div class="fish" id="fish"></div>
+    <div class="fish" id="fish2"></div>
+    <div class="plants"></div>
     {% block content %}
     <div class="title">
         <p class="AIGC-title">AIGC Teacher Master</p>
