--- a/static/css/button_animation.css
+++ b/static/css/button_animation.css
@@ -49,3 +49,10 @@
     --s: #0005;
     transition: none;
 }
+
+#view_file,
+#view_face {
+    clip-path:
+        polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
+            100% 100%, var(--slant) 100%, 0 calc(100% - var(--slant))) !important;
+}
