--- a/templates/output.html
+++ b/templates/output.html
@@ -57,7 +57,7 @@
     </div>
     <div class="course-view-data">
         <div class="course-material" id="course-frame-right">
-            <iframe src="../static/pdf/outline.pdf" width="100%" height="100%" scrolling="yes"></iframe>
+            <iframe src="../static/pdf/outline.pdf" width="100%" height="100%"></iframe>
         </div>
         <div class="material-download-frame">
             <a href="../static/pdf/outline.pdf" download="coursepdf">
