--- a/templates/student.html
+++ b/templates/student.html
@@ -53,7 +53,7 @@
     </div>
     <div class="course-view-data">
         <div class="course-material" id="course-frame-right">
-            <iframe src="../static/pdf/CCNA-RS-5.0-ITN-CHT-Chapter_03_Network_Protocols_and_Communications.pptx" width="100%" height="100%" scrolling="yes"></iframe>
+            <iframe src="../static/pdf/CCNA-RS-5.0-ITN-CHT-Chapter_03_Network_Protocols_and_Communications.pptx" width="100%" height="100%"></iframe>
         </div>
         <div class="material-download-frame">
             <a href="../static/pdf/outline.pdf" download="coursepdf">
