--- a/templates/register.html
+++ b/templates/register.html
@@ -6,11 +6,10 @@
 {% block content %}
 
 <div class="center">
-    <div class="button-frame role-open role-selection">
+    <div class="button-frame role-open role-selection" style="height: 80vh; margin-top: 5%;">
         <a href="/"><button class="button-frame button-anime return-button"><i class="fa-solid fa-arrow-left-long"></i></button></a>
         <span>Teacher Register</span>
         <div class="input-frame">
-            
             <div>
                 <div class="input-box">
                     <input type="text" class="button-frame login-frame" id='teacher-register-username'required>
