--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -100,6 +100,7 @@
 
 .toggler:checked~.menu {
     width: 30%;
+    min-width: 350px;
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
     transform: translateX(0);
