--- a/templates/output.html
+++ b/templates/output.html
@@ -1,9 +1,9 @@
 {% extends 'teacher.html' %}
 {% block content %}
 <header>
-    <div class="title">
+    <!-- <div class="title">
         <p class="AIGC-title">AIGC Teacher Master</p>
-    </div>
+    </div> -->
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
@@ -28,12 +28,6 @@
     <div class="bg"></div>
     <div class="mask"></div>
 </header>
-
-<input name="chapter_name" value="" style="display:none">
-<input name="subject_name" value="" style="display:none">
-<input name="file_name" value="" style="display:none">
-<input name="author" value="author" style="display:none">
-
 
 <div class="course">
     <p class="course-title" style="text-align: center;">Choose file</p>
