--- a/templates/student.html
+++ b/templates/student.html
@@ -7,9 +7,9 @@
 {% block content %}
 
 <header>
-    <div class="title">
+    <!-- <div class="title">
         <p class="AIGC-title">AIGC Teacher Master</p>
-    </div>
+    </div> -->
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
